Fix alignment issues with left-section

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     background-color: var(--darkGreen);
     color: black;
-    font-family: r;
+    font-family: 'Roboto';
 }
 
 .box {
@@ -41,9 +41,13 @@ body {
     width: 98%;
     grid-template-columns: 2fr 5fr 3fr;
     grid-template-rows: 1fr 2fr 2fr;
+    gap: 10px;
     border: 2px solid var(--whiteish);
-    border-radius: 20px;
     background-color: var(--dullGreen);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .left-section {
@@ -61,6 +65,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    border-bottom: 1px solid var(--whiteish);
 }
 
 .projects-section {
@@ -70,7 +75,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .dates-section {
@@ -90,9 +95,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
-    height: 100%;
-    max-height: 800px;    
+    justify-content: center;
+    height: 80%;
+    /* max-height:400px; */  
 }
 
 .nav-container {
@@ -100,7 +105,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 10px 0;
+    padding: 5px;
 }
 
 .nav-container img {
@@ -118,7 +123,7 @@ body {
 }
 
 .github {
-    height: 100%;
+    height: 20%;
     display: flex;
     align-items:flex-end;
     justify-content: center;
@@ -126,7 +131,7 @@ body {
 }
 
 .git-image {
-    max-height: 100px
+    max-height: 70px
 }
 
 /* Search Box Section */
@@ -200,8 +205,10 @@ body {
 
 /* Projects Section */
 
+
 .projects-title {
     font-size: 2rem;
+    
 }
 
 .project-likes {
